--- a/style.css
+++ b/style.css
@@ -4,15 +4,185 @@
     box-sizing: border-box;
 }
 
-/* elementos */
+@font-face {
+    font-family: LatoRegular;
+    src: url(./assets/fonts/Lato/Lato-Regular.ttf);
+}
+
+@font-face {
+    font-family: LatoBold;
+    src: url(./assets/fonts/Lato/Lato-Bold.ttf);
+}
+
+@font-face {
+    font-family: Oswald;
+    src: url(./assets/fonts/Oswald/Oswald-VariableFont_wght.ttf);
+}
+
+/* header */
 
 header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    height: 94px;
+    padding-left: 72px;
+    padding-right: 72px;
+    align-items: center;
     background-image: linear-gradient(to right, #1E52B4 , #002777);
 }
 
-/* imagens */
+#header-logo {
+    width: 155.58px;
+    height: 22.9px;
+}
 
+.header-nav {
+    font-family: LatoRegular;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    align-items: center;
+    width: 30%;
+}
+
+.header-link-div {
+    padding-top: 6.5px;
+    text-align: center;
+    height: 35px;
+    width: 151px;
+    border: 1px solid white;
+    border-radius: 8px;
+}
+
+/* banner */
+
+.banner-container {
+    width: 100%;
+    height: 367px;
+    background-image: linear-gradient(to right, #1E52B4 , #002777);
+    display: flex;
+    color: #FAFAFA;
+    padding-left: 72px;
+    padding-right: 72px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner-image {
+    margin-right: 45px;
+}
+
+.banner-text-container {
+    width: 470px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-bottom: 100px;
+}
+
+.banner-text-container h2 {
+    font-family: LatoBold;
+    font-size: 28px;
+}
+
+.banner-container p {
+    font-family: LatoRegular;
+    font-size: 18px;
+    width: 420px;
+
+}
+
+/* search bar */
+
+.banner-bar {
+    position: relative;
+    top: -45px;
+    left: 17%;
+    display: flex;
+    height: 80px;
+    width: 942px;
+    box-shadow: 4px 4px 10px 5px rgba(0, 0, 0, 0.15);
+    font-family: LatoRegular;
+    font-size: 16px;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 8px;
+    background-color: white;
+}
+
+.banner-bar-form {
+    display: flex;
+    gap: 80px;
+}
+
+.banner-bar-form input[type=submit] {
+    background-color: #009C3B;
+    border: none;
+    border-radius: 8px;
+    height: 45px;
+    width: 160px;
+    font-family: LatoRegular;
+    font-size: 15px;
+    color: white;
+}
+
+.banner-bar-form-input-label {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+}
+
+.banner-bar-form img {
+    width: 20px;
+}
+
+.banner-bar-form-input {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
+/* search results */
+
+section {
+    display: flex;
+    gap: 32px;
+    padding-left: 72px;
+    padding-right: 72px;
+}
+
+section h3 {
+    font-family: LatoBold;
+    font-size: 16px;
+    color: #2E2636;
+}
+
+section p {
+    font-family: LatoRegular;
+    font-size: 12px;
+    color: #33303E;
+}
+
+section img {
+    width: 260px;
+    height: 173px;
+    border-radius: 8px;
+}
+
+.results-card {
+    width: 260px;
+}
+
+.results-card-title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.results-card-title-state {
+    font-family: Oswald;
+    font-weight: 600;
+    color: #FFDF00;
+}
